--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,6 @@
 
 # Ignore application configuration
 /config/application.yml
-/public/uploads/*
-/public/uploads/tmp/*
-/public/uploads/
+public/uploads/*
+public/uploads/tmp/*
+public/uploads/
